Fix blurry tooltips in Chrome

--- a/tachiwebui/src/main/resources/tachiweb-ui/css/core.css
+++ b/tachiwebui/src/main/resources/tachiweb-ui/css/core.css
@@ -10,6 +10,11 @@ html, body {
     padding-right: 0;
 }
 
+/** Workaround for blurry tooltips in Chrome **/
+.mdl-tooltip {
+    will-change: unset;
+}
+
 /** App bar **/
 .back-button {
     margin-left: -20px;
